methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:7: error: not found: value setCouleurBorsse
def faireV(c:Color){avance();droite;setCouleurBorsse(c);a();avance();droite();avance();a();avance();droite();avance();a();gauche(); avance;gauche()}
                                    ^